# pytroll-db

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.rst  __init__.py  changelog.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
dibby/: pytroll_db_v2.sql
docs/: Makefile  make.sh  requirements.txt
docs/source/: conf.py  index.rst
doobie/: db_recorder.py  hl_file.py  pytroll_cleanup.py  pytroll_db.architect  pytroll_db.py  pytroll_db_ed.sql  pytroll_db_v2.sql  version.py
trolldb/: __init__.py  cli.py  db_recorder.py  pytroll_cleanup.py  pytroll_db.py  pytroll_test_query.sql  run_api.py  template_config.yaml  test_db_value.py  test_pytroll_db_insert.py  version.py
trolldb/api/: __init__.py  api.py  fastapi_app.py
trolldb/api/errors/: errors.py
trolldb/api/routes/: __init__.py  common.py  databases.py  datetime_.py  platforms.py  queries.py  root.py  router.py  sensors.py
trolldb/api/tests/: conftest.py  test_api.py
trolldb/config/: __init__.py  config.py
trolldb/database/: __init__.py  errors.py  mongodb.py  pipelines.py  piplines.py
trolldb/database/tests/: conftest.py  test_mongodb.py
trolldb/errors/: __init__.py  errors.py
trolldb/test_utils/: __init__.py  common.py  mock_mongodb_database.py  mongodb_database.py  mongodb_instance.py
trolldb/tests/: conftest.py  test_db.py  test_recoder.py  test_recorder.py
trolldb/tests/tests_api/: test_api.py
trolldb/tests/tests_config/: test_config.py
trolldb/tests/tests_database/: test_mongodb.py  test_pipelines.py
