[project]
name = "pytroll-db"
dynamic = ["version"]
description = "The database API of Pytroll"
authors = [
    { name = "Pouria Khalaj", email = "pouria.khalaj@smhi.se" },
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
    { name = "Adam Dybbroe", email = "Adam.Dybbroe@smhi.se" },
    { name = "Esben S. Nielsen", email = "esn@dmi.dk" },
    { name = "Kristian Rune Larsen", email = "krl@dmi.dk" }
]
readme = "README.rst"
requires-python = ">= 3.12"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Database"
]

dependencies = [
    "fastapi",
    "loguru",
    "motor",
    "posttroll",
    "pydantic",
    "pymongo",
    "pyyaml",
    "urllib3",
    "uvicorn"
]

[project.optional-dependencies]
doc = ["sphinx", "sphinx_rtd_theme"]
hooks = ["pre-commit", "ruff"]
tests = ["httpx", "pytest", "pytest-asyncio", "pytest-cov", "pytest-lazy-fixtures"]
dev = ["pytroll-db[doc,hooks,tests]"]

[project.urls]
"Documentation" = "https://pytroll-db.readthedocs.io/en/latest/"

[project.scripts]
pytroll-db-recorder = "trolldb.cli:run_sync"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["trolldb"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "trolldb/version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["A", "B", "D", "E", "W", "F", "I", "N", "PT", "S", "TID", "C90", "Q", "T10", "T20"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101"]  # assert allowed in tests
"docs/source/conf.py" = ["D100", "A001"]  # sphinx misbihaving
"src/trolldb/version.py" = ["D100", "Q000"]  # automatically generated by hatch-vcs

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
